# rust-api

./: Cargo.toml
src/: main.rs
src/controllers/: index.rs
src/libs/: connection.rs
src/middlewares/: cookie_checkers.rs  jwt.rs  middleware.rs  mod.rs
src/models/: claims.rs  login.rs  mod.rs  stats.rs  user.rs
src/routes/: route.rs
