[package]
name = "rust-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web="4"
dotenv = "0.15.0"
async-std = "1.12.0"
sqlx = {version = "0.7", default-features = false, features = ["runtime-async-std", "macros", "mysql", "time"]}
time = {version = "0.3.22", default-features = false, features = ["formatting", "macros"]}
serde = { version = "1.0", features = ["derive"] }
base64 = "0.13.1"
jsonwebtoken = "8.2.0"
argon2 = "0.4.1"
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }